# aoc

./: .gitignore  template.rs
day-08/: Cargo.toml
day-11/: Cargo.toml
day-12/: Cargo.toml
day-12/benches/: benchmark.rs
day-12/src/: main.rs  part1.rs  part2.rs
day-13/: Cargo.toml
day-13/benches/: benchmark.rs
day-13/src/: main.rs  part1.rs  part2.rs
day-14/: Cargo.toml
day-14/benches/: benchmark.rs
day-14/src/: main.rs  part1.rs  part2.rs
day-15/: Cargo.toml
day-15/benches/: benchmark.rs
day-15/src/: main.rs  part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmark.rs
day-16/src/: main.rs  part1.rs  part2.rs
day-17/: Cargo.toml
day-17/benches/: benchmark.rs
day-17/src/: main.rs  part1.rs  part2.rs
day-18/: Cargo.toml
day-18/benches/: benchmark.rs
day-18/src/: main.rs  part1.rs  part2.rs
day-19/: Cargo.toml
day-19/benches/: benchmark.rs
day-19/src/: main.rs  part1.rs  part2.rs
day-20/: Cargo.toml
day-20/src/: lib.rs  main.rs  part1plus2.rs
day-21/: Cargo.toml  log.txt
day-21/benches/: benchmark.rs
day-21/src/: main.rs  part1.rs  part2.rs  utils.rs
day-22/: Cargo.toml
day-22/benches/: benchmark.rs
day-22/src/: main.rs  part1.rs  part2.rs  utils.rs
day-23/: Cargo.toml
day-23/benches/: benchmark.rs
day-23/src/: main.rs  part1.rs  part2.rs  utils.rs
day-24/: Cargo.toml
day-24/benches/: benchmark.rs
day-24/src/: main.rs  part1.rs  part2.rs  utils.rs
day-25/: Cargo.toml
day-25/benches/: benchmark.rs
day-25/src/: main.rs  part1.rs
template/: Cargo.toml
template/src/: main.rs  part1.rs
