[package]
name = "day-08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false


[target.'cfg(target_arch = "x86_64")']
rustflags = ["-C", "target-cpu=native"]