[package]
name = "day-14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false

[dependencies]
#grid = "0.12.0"
#cached = "0.46.1"
#rayon = "1.8.0"

[dev-dependencies]
rstest = "0.18.2"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
